--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>br.com.brunogodoif</groupId>
     <artifactId>projectmanagement</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>projectmanagement</name>
     <description>projectmanagement</description>
     <url/>
